Fix overflow on editor

--- a/src/feature/Editor/styles.module.css
+++ b/src/feature/Editor/styles.module.css
@@ -56,6 +56,7 @@
 	padding: var(--large-padding);
 	padding-top: var(--xl-padding);
 	width: 100%;
+    overflow-y: auto;
 
 	& .add-button-container {
 		padding: var(--default-padding);
